# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  board.xcf  build.sh  disagreement_hunt.py  network_visualizer.py  nn-OnlyMiniMax.json  nn-RandomPlay.json  perft_diff_hunt.py  puzzleRater.py  sampleNN.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: chess.hpp  engine.hpp  popen2.hpp  stockfish_engine.hpp
include/connect4/: connect4.hpp  neural_net.hpp
include/scacus/: antichess.hpp  bitboard.hpp  config.hpp  engine.hpp  move_list.hpp  movegen.hpp  position.hpp  uci.hpp
include/scacus/impl/: make_unmake.hpp  std_moves.hpp
src/: chess.cpp  engine.cpp  gui.cpp  main.cpp  popen2.cpp  stockfish_engine.cpp  uci.cpp
src/connect4/: c4_main.cpp  connect4.cpp  neural_net.cpp
src/scacus/: antichess.cpp  bitboard.cpp  engine.cpp  make_unmake.cpp  movegen.cpp  movegen_std.cpp  std_moves.cpp  uci.cpp
